--- a/package.json
+++ b/package.json
@@ -30,31 +30,29 @@
     "@tiptap/pm": "^2.5.9",
     "@tiptap/starter-kit": "^2.5.9",
     "@tiptap/suggestion": "^2.6.5",
-    "@unocss/reset": "^0.63.6",
-    "astro": "^4.16.11",
+    "@astrojs/tailwind": "^5.1.0",
+    "@fontsource-variable/inter": "^5.0.18",
+    "@fontsource/noto-serif-sc": "^5.0.20",
+    "astro": "^5.1.8",
     "dayjs": "^1.11.13",
     "github-slugger": "^2.0.0",
     "idb": "^8.0.0",
     "jsx-dom": "^8.1.5",
     "lowlight": "^3.1.0",
+    "marked": "^15.0.0",
+    "nanostores": "^0.11.0",
     "octokit": "^4.0.2",
     "prosemirror-model": "^1.25.0",
+    "rehype-external-links": "^3.0.0",
+    "tailwindcss": "^3.4.10",
     "tippy.js": "^6.3.7",
+    "tiny-pinyin": "^1.3.2",
     "typescript": "^5.6.3"
   },
   "devDependencies": {
-    "@eslint/js": "^9.15.0",
-    "@iconify-json/game-icons": "^1.2.0",
-    "@iconify-json/material-symbols": "^1.2.5",
-    "@iconify-json/mdi-light": "^1.2.1",
-    "@iconify-json/ri": "^1.2.3",
-    "@iconify-json/svg-spinners": "^1.2.1",
-    "@types/node": "^22.9.0",
-    "eslint": "^9.15.0",
-    "globals": "^15.12.0",
-    "sass": "^1.81.0",
-    "typescript-eslint": "^8.16.0",
-    "unocss": "^0.64.0",
-    "unocss-preset-theme": "^0.14.1"
+    "@tailwindcss/typography": "^0.5.12",
+    "prettier": "^3.3.3",
+    "prettier-plugin-tailwindcss": "^0.6.5",
+    "sass": "^1.81.0"
   }
 }
